2011-11-02  Eric Seidel  <eric@webkit.org>

        Move Mocks into _mock files near their implementations
        https://bugs.webkit.org/show_bug.cgi?id=71425

        Reviewed by Adam Barth.

        This entire change is splitting mocktool.py into separate _mock.py files
        and placing them next to their real implementations.

        I also deleted MockPortFactory (since it was wrong) and was just hiding
        the fact that the "skipped-ports" command was broken (and has been for a long time).
        So I made MockHost use a real PortFactory (passed a MockHost) and changed
        the skipped-ports implementation to use modern PortFactory methods.

        * Scripts/webkitpy/common/checkout/baselineoptimizer_unittest.py:
        * Scripts/webkitpy/common/checkout/checkout_mock.py: Added.
        * Scripts/webkitpy/common/checkout/checkout_unittest.py:
        * Scripts/webkitpy/common/checkout/deps_mock.py: Copied from Tools/Scripts/webkitpy/layout_tests/port/__init__.py.
        * Scripts/webkitpy/common/checkout/scm/scm_mock.py: Added.
        * Scripts/webkitpy/common/checkout/scm/scm_unittest.py:
        * Scripts/webkitpy/common/config/ports_mock.py: Copied from Tools/Scripts/webkitpy/layout_tests/port/gtk_unittest.py.
        * Scripts/webkitpy/common/host.py:
        * Scripts/webkitpy/common/host_mock.py: Added.
        * Scripts/webkitpy/common/net/bugzilla/bugzilla_mock.py: Added.
        * Scripts/webkitpy/common/net/bugzilla/bugzilla_unittest.py:
        * Scripts/webkitpy/common/net/buildbot/buildbot_mock.py: Added.
        * Scripts/webkitpy/common/net/credentials_unittest.py:
        * Scripts/webkitpy/common/net/failuremap_unittest.py:
        * Scripts/webkitpy/common/net/irc/irc_mock.py: Copied from Tools/Scripts/webkitpy/layout_tests/port/__init__.py.
        * Scripts/webkitpy/common/net/statusserver_mock.py: Copied from Tools/Scripts/webkitpy/layout_tests/port/gtk_unittest.py.